[gd_scene load_steps=9 format=3 uid="uid://begmy6hty838m"]

[ext_resource type="Texture2D" uid="uid://5uwgihkeptgc" path="res://graphics/player/player.png" id="1_itqrb"]
[ext_resource type="Script" path="res://scenes/player/player.gd" id="1_jh2bm"]
[ext_resource type="Texture2D" uid="uid://cidknch54h3ma" path="res://graphics/decals/white.png" id="3_uxksp"]

[sub_resource type="CircleShape2D" id="CircleShape2D_qmctn"]
radius = 67.0075

[sub_resource type="Gradient" id="Gradient_e0bav"]
offsets = PackedFloat32Array(0.00293686, 0.997063)
colors = PackedColorArray(0.0666667, 0.988235, 1, 0.482353, 0.305882, 0.988235, 1, 0.34902)

[sub_resource type="GradientTexture1D" id="GradientTexture1D_4ardt"]
gradient = SubResource("Gradient_e0bav")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_blflc"]
particle_flag_disable_z = true
spread = 15.0
initial_velocity_min = 1200.0
initial_velocity_max = 1500.0
gravity = Vector3(0, 0, 0)
scale_min = 0.3
scale_max = 0.8
color = Color(0.0666667, 0.988235, 1, 0.341176)
color_ramp = SubResource("GradientTexture1D_4ardt")

[sub_resource type="OccluderPolygon2D" id="OccluderPolygon2D_pdcsl"]
polygon = PackedVector2Array(130, -6, 134, -5, 137, 1, 138, 9, 137, 17, 134, 21, 130, 20, 126, 20, 128, 23, 129, 25, 118, 26, 116, 25, 114, 25, 110, 34, 105, 36, 105, 42, 103, 45, 71, 50, 67, 46, 67, 41, 74, 37, 53, 40, 51, 39, 44, 45, 32, 49, 25, 56, 13, 64, 5, 65, 0, 67, -6, 68, -15, 68, -21, 66, -26, 62, -28, 56, -34, 50, -37, 45, -43, 41, -47, 34, -45, 31, -46, 28, -50, 27, -55, 20, -58, 13, -58, 8, -59, 0, -59, -6, -58, -12, -55, -17, -55, -23, -50, -30, -44, -34, -39, -36, -35, -37, -33, -35, -32, -37, -32, -41, -29, -44, -23, -48, -17, -49, -16, -47, -9, -52, -4, -54, 2, -55, 4, -54, 6, -55, 15, -58, 19, -58, 25, -54, 29, -50, 32, -47, 41, -41, 41, -38, 47, -30, 52, -31, 55, -30, 62, -27, 77, -15, 85, -18, 90, -17, 93, -15, 96, -13, 97, -12, 103, -13, 108, -13, 111, -12, 113, -9, 119, -9, 124, -10, 126, -8, 126, -6, 125, -4)

[node name="Player" type="CharacterBody2D"]
collision_mask = 31
script = ExtResource("1_jh2bm")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_qmctn")

[node name="PlayerImage" type="Sprite2D" parent="."]
position = Vector2(39, 1)
rotation = 1.42942
texture = ExtResource("1_itqrb")

[node name="LaserTimer" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[node name="GrenadeTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="ProjectileStartPositions" type="Node2D" parent="."]

[node name="Marker2D" type="Marker2D" parent="ProjectileStartPositions"]
position = Vector2(136, 4)

[node name="Marker2D2" type="Marker2D" parent="ProjectileStartPositions"]
position = Vector2(135, 15)

[node name="Marker2D3" type="Marker2D" parent="ProjectileStartPositions"]
position = Vector2(130, -2)

[node name="GPUParticles2D" type="GPUParticles2D" parent="."]
position = Vector2(136, 7)
emitting = false
process_material = SubResource("ParticleProcessMaterial_blflc")
texture = ExtResource("3_uxksp")
lifetime = 0.2
one_shot = true

[node name="LightOccluder2D" type="LightOccluder2D" parent="."]
occluder = SubResource("OccluderPolygon2D_pdcsl")

[connection signal="timeout" from="LaserTimer" to="." method="_on_laser_timer_timeout"]
[connection signal="timeout" from="GrenadeTimer" to="." method="_on_grenade_timer_timeout"]
